--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -130,8 +130,8 @@
         <!--begin::Users group-->
         <div class="symbol-group symbol-hover mb-9">
         <ng-container *ngFor="let usu of correoMiembrosEquipoList; let u = index;">
-          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.correo != null ? usu.correo : usuario.correo_login}}">
-            <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.correo != null ? usu.correo.substring(0, 1).toUpperCase() : 'Yo')}}</span>
+          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
+            <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.usuario_id == usuario.id ? 'Yo' : (usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre.substring(0, 1).toUpperCase() : (usu.correo.substring(0, 1).toUpperCase())))}}</span>
           </div>
         </ng-container>
         </div>
@@ -257,8 +257,8 @@
         <div class="symbol-group symbol-hover">
 
           <ng-container *ngFor="let usu of proyecto.equipos_equipo.equipo_usuarios; let u = index;">
-          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.correo != null ? usu.correo : usuario.correo_login}}">
-            <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.correo != null ? usu.correo.substring(0, 1).toUpperCase() : 'Yo')}}</span>
+          <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo != null ? usu.correo : usuario.correo_login)}}">
+            <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.usuario_id == usuario.id ? 'Yo' : (usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre.substring(0, 1).toUpperCase() : usu.correo.substring(0, 1).toUpperCase()))}}</span>
           </div>
           </ng-container>
 
@@ -284,4 +284,106 @@
   <!--end::Col-->
 
 </div>
+
+
+<!--begin::Modals-->
+								<!--begin::Modal - View Users-->
+								<div class="modal fade" id="kt_modal_view_users" tabindex="-1" aria-hidden="true">
+									<!--begin::Modal dialog-->
+									<div class="modal-dialog mw-650px">
+										<!--begin::Modal content-->
+										<div class="modal-content">
+											<!--begin::Modal header-->
+											<div class="modal-header pb-0 border-0 justify-content-end">
+												<!--begin::Close-->
+												<div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
+													<!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg-->
+													<span class="svg-icon svg-icon-1">
+														<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+															<rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)" fill="currentColor" />
+															<rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="currentColor" />
+														</svg>
+													</span>
+													<!--end::Svg Icon-->
+												</div>
+												<!--end::Close-->
+											</div>
+											<!--begin::Modal header-->
+											<!--begin::Modal body-->
+											<div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15">
+												<!--begin::Heading-->
+												<div class="text-center mb-13">
+													<!--begin::Title-->
+													<h1 class="mb-3">Miembros de los equipos</h1>
+													<!--end::Title-->
+													<!--begin::Description-->
+													<!--<div class="text-muted fw-bold fs-5">If you need more info, please check out our
+													<a href="#" class="link-primary fw-bolder">Users Directory</a>.</div>-->
+													<!--end::Description-->
+												</div>
+												<!--end::Heading-->
+												<!--begin::Users-->
+												<div class="mb-15">
+													<!--begin::List-->
+													<div class="mh-375px scroll-y me-n7 pe-7">
+														<!--begin::User-->
+														
+                              <ng-container *ngFor="let usu of correoMiembrosEquipoList; let u = index;">
+                                <div class="d-flex flex-stack py-5 border-bottom border-gray-300 border-bottom-dashed">
+                                  <div class="d-flex align-items-center">
+                                  <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.correo != null ? usu.correo : usuario.correo_login}}">
+                                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.correo != null ? usu.correo.substring(0, 1).toUpperCase() : 'Yo')}}</span>
+                                  </div>
+                                  
+                                  <!--begin::Details-->
+                                  <div class="ms-6">
+                                    <!--begin::Name-->
+                                    <a href="#" class="d-flex align-items-center fs-5 fw-bolder text-dark text-hover-primary">
+                                      <label class="fw-bold text-muted">{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : ''}}
+                                      </label>
+                                    <span class="badge badge-light fs-8 fw-bold ms-2">{{usu.rol}}</span></a>
+                                    <!--end::Name-->
+                                    <!--begin::Email-->
+                                    <div class="fw-bold text-muted">{{usu.correo != null ? usu.correo : usuario.correo_login}}</div>
+                                    <!--end::Email-->
+                                  </div>
+                                  <!--end::Details-->
+                                </div>
+                                
+															<!--begin::Stats-->
+															<div class="d-flex">
+																<!--begin::Sales-->
+																<div class="text-end">
+																	<div class="fs-5 fw-bolder text-dark">$23,000</div>
+																	<div class="fs-7 text-muted">Sales</div>
+																</div>
+																<!--end::Sales-->
+															</div>
+															<!--end::Stats-->
+                            </div>
+                              </ng-container>
+                                 
+													</div>
+													<!--end::List-->
+												</div>
+												<!--end::Users-->
+												<!--begin::Notice
+												<div class="d-flex justify-content-between">
+													<div class="fw-bold">
+														<label class="fs-6">Adding Users by Team Members</label>
+														<div class="fs-7 text-muted">If you need more info, please check budget planning</div>
+													</div>
+													<label class="form-check form-switch form-check-custom form-check-solid">
+														<input class="form-check-input" type="checkbox" value="" checked="checked" />
+														<span class="form-check-label fw-bold text-muted">Allowed</span>
+													</label>
+												</div>
+												end::Notice-->
+											</div>
+											<!--end::Modal body-->
+										</div>
+										<!--end::Modal content-->
+									</div>
+									<!--end::Modal dialog-->
+								</div>
 
