--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -27,7 +27,7 @@
           <!--begin::Actions-->
           <div class="d-flex mb-4">
             <a href="#" class="btn btn-sm btn-bg-light btn-active-color-primary me-3" data-bs-toggle="modal" data-bs-target="#kt_modal_users_search">Invitar</a>
-            <a href="#" class="btn btn-sm btn-primary me-3" data-bs-toggle="modal" data-bs-target="#kt_modal_new_target">Iniciar Proyecto</a>
+            <a routerLink="/proyect-init" class="btn btn-sm btn-primary me-3">Iniciar Proyecto</a>
             <!--begin::Menu-->
             <div class="me-0">
               <button class="btn btn-sm btn-icon btn-bg-light btn-active-color-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
