--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -213,7 +213,7 @@
           <div class="symbol-group symbol-hover mb-3">
           <a href="#" class="btn btn-primary btn-sm me-3" data-bs-toggle="modal" data-bs-target="#kt_modal_view_users">Ver todos</a>
           </div>
-          
+
           <!--end::Users-->
         </div>
         <!--end::Info-->
@@ -226,37 +226,37 @@
     <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bold">
       <!--begin::Nav item-->
       <li class="nav-item">
-        <a class="nav-link text-active-primary py-5 me-6 active" href="../../demo1/dist/apps/projects/project.html">Overview</a>
+        <a class="nav-link text-active-primary py-5 me-6 active" routerLink="overview">Overview</a>
       </li>
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/targets.html">Targets</a>
-      </li>
+      </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/budget.html">Budget</a>
-      </li>
+      </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/users.html">Users</a>
-      </li>
+      </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/files.html">Files</a>
-      </li>
+      </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/activity.html">Activity</a>
-      </li>
+      </li> -->
       <!--end::Nav item-->
       <!--begin::Nav item-->
       <li class="nav-item">
-        <a class="nav-link text-active-primary py-5 me-6" href="../../demo1/dist/apps/projects/settings.html">Settings</a>
+        <a class="nav-link text-active-primary py-5 me-6" routerLink="settings">Settings</a>
       </li>
       <!--end::Nav item-->
     </ul>
@@ -264,146 +264,7 @@
   </div>
 </div>
 <!--end::Navbar-->
-<!--begin::Row-->
-<div class="row g-6 g-xl-9">
-  <!--begin::Col-->
-  <div class="col-lg-6">
-    <!--begin::Summary-->
-    <div class="card card-flush h-lg-100">
-      <!--begin::Card header-->
-      <div class="card-header mt-6">
-        <!--begin::Card title-->
-        <div class="card-title flex-column">
-          <h3 class="fw-bold mb-1">Tasks Summary</h3>
-          <div class="fs-6 fw-semibold text-gray-400">24 Overdue Tasks</div>
-        </div>
-        <!--end::Card title-->
-        <!--begin::Card toolbar-->
-        <div class="card-toolbar">
-          <a href="#" class="btn btn-light btn-sm">View Tasks</a>
-        </div>
-        <!--end::Card toolbar-->
-      </div>
-      <!--end::Card header-->
-      <!--begin::Card body-->
-      <div class="card-body p-9 pt-5">
-        <!--begin::Wrapper-->
-        <div class="d-flex flex-wrap">
-          <!--begin::Chart-->
-          <div class="position-relative d-flex flex-center h-175px w-175px me-15 mb-7">
-            <div class="position-absolute translate-middle start-50 top-50 d-flex flex-column flex-center">
-              <span class="fs-2qx fw-bold">237</span>
-              <span class="fs-6 fw-semibold text-gray-400">Total Tasks</span>
-            </div>
-            <canvas id="project_overview_chart"></canvas>
-          </div>
-          <!--end::Chart-->
-          <!--begin::Labels-->
-          <div class="d-flex flex-column justify-content-center flex-row-fluid pe-11 mb-5">
-            <!--begin::Label-->
-            <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
-              <div class="bullet bg-primary me-3"></div>
-              <div class="text-gray-400">Active</div>
-              <div class="ms-auto fw-bold text-gray-700">30</div>
-            </div>
-            <!--end::Label-->
-            <!--begin::Label-->
-            <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
-              <div class="bullet bg-success me-3"></div>
-              <div class="text-gray-400">Completed</div>
-              <div class="ms-auto fw-bold text-gray-700">45</div>
-            </div>
-            <!--end::Label-->
-            <!--begin::Label-->
-            <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
-              <div class="bullet bg-danger me-3"></div>
-              <div class="text-gray-400">Overdue</div>
-              <div class="ms-auto fw-bold text-gray-700">0</div>
-            </div>
-            <!--end::Label-->
-            <!--begin::Label-->
-            <div class="d-flex fs-6 fw-semibold align-items-center">
-              <div class="bullet bg-gray-300 me-3"></div>
-              <div class="text-gray-400">Yet to start</div>
-              <div class="ms-auto fw-bold text-gray-700">25</div>
-            </div>
-            <!--end::Label-->
-          </div>
-          <!--end::Labels-->
-        </div>
-        <!--end::Wrapper-->
-        <!--begin::Notice-->
-        <div class="notice d-flex bg-light-primary rounded border-primary border border-dashed p-6">
-          <!--begin::Wrapper-->
-          <div class="d-flex flex-stack flex-grow-1">
-            <!--begin::Content-->
-            <div class="fw-semibold">
-              <div class="fs-6 text-gray-700">
-              <a href="#" class="fw-bold me-1">Invite New .NET Collaborators</a>to create great outstanding business to business .jsp modutr class scripts</div>
-            </div>
-            <!--end::Content-->
-          </div>
-          <!--end::Wrapper-->
-        </div>
-        <!--end::Notice-->
-      </div>
-      <!--end::Card body-->
-    </div>
-    <!--end::Summary-->
-  </div>
-  <!--end::Col-->
-  <!--begin::Col-->
-  <div class="col-lg-6">
-    <!--begin::Graph-->
-    <div class="card card-flush h-lg-100">
-      <!--begin::Card header-->
-      <div class="card-header mt-6">
-        <!--begin::Card title-->
-        <div class="card-title flex-column">
-          <h3 class="fw-bold mb-1">Tasks Over Time</h3>
-          <!--begin::Labels-->
-          <div class="fs-6 d-flex text-gray-400 fs-6 fw-semibold">
-            <!--begin::Label-->
-            <div class="d-flex align-items-center me-6">
-            <span class="menu-bullet d-flex align-items-center me-2">
-              <span class="bullet bg-success"></span>
-            </span>Complete</div>
-            <!--end::Label-->
-            <!--begin::Label-->
-            <div class="d-flex align-items-center">
-            <span class="menu-bullet d-flex align-items-center me-2">
-              <span class="bullet bg-primary"></span>
-            </span>Incomplete</div>
-            <!--end::Label-->
-          </div>
-          <!--end::Labels-->
-        </div>
-        <!--end::Card title-->
-        <!--begin::Card toolbar-->
-        <div class="card-toolbar">
-          <!--begin::Select-->
-          <select name="status" data-control="select2" data-hide-search="true" class="form-select form-select-solid form-select-sm fw-bold w-100px">
-            <option value="1">2020 Q1</option>
-            <option value="2">2020 Q2</option>
-            <option value="3" selected="selected">2020 Q3</option>
-            <option value="4">2020 Q4</option>
-          </select>
-          <!--end::Select-->
-        </div>
-        <!--end::Card toolbar-->
-      </div>
-      <!--end::Card header-->
-      <!--begin::Card body-->
-      <div class="card-body pt-10 pb-0 px-5">
-        <!--begin::Chart-->
-        <div id="kt_project_overview_graph" class="card-rounded-bottom" style="height: 300px"></div>
-        <!--end::Chart-->
-      </div>
-      <!--end::Card body-->
-    </div>
-    <!--end::Graph-->
-  </div>
-  <!--end::Col-->
+<router-outlet></router-outlet>
 
 <!--begin::Modals-->
 								<!--begin::Modal - View Users-->
@@ -446,14 +307,14 @@
 													<!--begin::List-->
 													<div class="mh-375px scroll-y me-n7 pe-7">
 														<!--begin::User-->
-														
+
                               <ng-container *ngFor="let usu of usuarios; let u = index;">
                                 <div class="d-flex flex-stack py-5 border-bottom border-gray-300 border-bottom-dashed">
                                   <div class="d-flex align-items-center">
                                   <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
                                     <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{(usu.usuario_id == usuario.id ? 'Yo' : (usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre.substring(0, 1).toUpperCase() : (usu.correo.substring(0, 1).toUpperCase())))}}</span>
                                   </div>
-                                  
+
                                   <!--begin::Details-->
                                   <div class="ms-6">
                                     <!--begin::Name-->
@@ -468,7 +329,7 @@
                                   </div>
                                   <!--end::Details-->
                                 </div>
-                                
+
 															<!--begin::Stats-->
 															<div class="d-flex">
 																<!--begin::Sales-->
@@ -481,7 +342,7 @@
 															<!--end::Stats-->
                             </div>
                               </ng-container>
-                                 
+
 													</div>
 													<!--end::List-->
 												</div>
@@ -540,7 +401,7 @@
 												<div id="kt_modal_users_search_handler" data-kt-search-keypress="true" data-kt-search-min-length="2" data-kt-search-enter="enter" data-kt-search-layout="inline">
 													<!--begin::Form-->
 													<form data-kt-search-element="form" class="w-100 position-relative mb-5" autocomplete="off" [formGroup]="form">
-														<!--begin::Hidden input(Added to disable form autocomplete)-->        
+														<!--begin::Hidden input(Added to disable form autocomplete)-->
                             <div class="d-flex">
 														<input type="hidden" />
 														<!--end::Hidden input-->
@@ -555,7 +416,7 @@
 														<!--end::Svg Icon-->
 														<!--end::Icon-->
 														<!--begin::Input-->
-														<input type="text" class="form-control form-control-solid me-3 flex-grow-1" name="search" 
+														<input type="text" class="form-control form-control-solid me-3 flex-grow-1" name="search"
                             formControlName="search_members" value="" placeholder="Correo Electrónico" data-kt-search-element="input" />
                             <a (click)="add()" class="btn btn-primary fw-bold flex-shrink-0">Agregar</a>
 														<!--end::Input-->
@@ -588,7 +449,7 @@
 															<!--end::Heading-->
 															<!--begin::Users-->
 															<div class="mh-375px scroll-y me-n7 pe-7">
-                                
+
                               <ng-container *ngFor="let usu of members; let u = index;">
                                 <!--begin::User-->
 																<div class="d-flex align-items-center p-3 rounded bg-state-light bg-state-opacity-50 mb-1">
@@ -616,12 +477,12 @@
                               </ng-container>
 
                               <div *ngIf="members.length < 1">No ha ingresado ningún correo</div>
-																
+
 																<!--end::User-->
 															</div>
 															<!--end::Users-->
                               <div class="text-center mb-13" *ngIf="members.length > 0">
-                          
+
                                 <button data-bs-dismiss="modal" class="btn btn-primary btn-sm me-3" (click)="invitar()" >Invitar</button>
                               </div>
 														</div>
