funcionalidades para dar play, pause, esconde y mostrar tiempo de video

--- a/src/app/_metronic/layout2/layout.component.scss
+++ b/src/app/_metronic/layout2/layout.component.scss
@@ -13,3 +13,15 @@
     transition: opacity 1s ease-in-out;
   }
 }
+
+.videoOn{
+  display: inline;
+}
+
+.videoOff{
+  display: none;
+}
+
+// #myVideo{
+//   display: none;
+// }
