--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -93,7 +93,7 @@
     </div>
     <!--end::Curve bottom-->
     <div class="container" style="text-align: center;">
-      <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="../../../assets/media/videos/video_test.mp4" width="640" height="480"></video>
+      <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="640" height="480"></video>
     </div>
   </div>
   <!--end::Header Section-->
