ajuste socket usuarios

--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -23,6 +23,11 @@
                 </span>
                 <!--end::Svg Icon-->
               </button>
+              <div class="symbol-group symbol-hover mb-3">
+                <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="Prueba">
+                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">P</span>
+                  </div>
+              </div>
               <!--end::Mobile menu toggle-->
               <!--begin::Logo image-->
               <!-- <a href="../../demo1/dist/landing.html">
