--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -24,9 +24,11 @@
                 <!--end::Svg Icon-->
               </button>
               <div class="symbol-group symbol-hover mb-3">
-                <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="Prueba">
-                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">P</span>
-                  </div>
+                <ng-container *ngFor="let usu of usuarios; let i = index;">
+                <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.title}}">
+                    <span class="symbol-label bg-primary text-inverse-primary fw-bold">{{usu.title.substring(0, 1).toUpperCase()}}</span>
+                </div>
+                </ng-container>
               </div>
               <!--end::Mobile menu toggle-->
               <!--begin::Logo image-->
