ajustes contenedor primer video

--- a/src/app/_metronic/layout2/layout.component.scss
+++ b/src/app/_metronic/layout2/layout.component.scss
@@ -25,3 +25,10 @@
 // #myVideo{
 //   display: none;
 // }
+.dark-modal {
+  background-color: #292b2c !important;
+  color: white !important;
+}
+.dark-modal .close {
+  color: white !important;
+}
