--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -1,5 +1,5 @@
 <!--begin::Root-->
-<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;">
+<div class="" style="background-color: #070d15 !important;">
   <!--begin::Header Section-->
   <div class="mb-0" id="home">
     <!--begin::Wrapper-->
@@ -99,25 +99,31 @@
       </svg>
     </div>
     <!--end::Curve bottom-->
-    <div class="container" style="text-align: center;">
-      <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="640" height="480"></video>
-    </div>
+
   </div>
   <!--end::Header Section-->
+  <!-- Tablero -->
+  <div class="container" style="width: 700; height: 700px;background-color: white; position: relative;">
+
+  </div>
+  <!-- Video -->
+  <div style="text-align: center; position: absolute; width: 100%;margin: -690px 0px 0px 0;">
+    <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1000" height="auto" style="border-radius: 10px;"></video>
+  </div>
   	<!--begin::Highlight-->
     <div class="" style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
       <!--begin::Link-->
       <div class="container" style="text-align: center;">
         <ng-container *ngIf="!playing; else elseBlock">
           <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
+            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px; margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
             </svg>
           </a>
         </ng-container>
         <ng-template #elseBlock>
           <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
+            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin:-46px;margin-left: 10px;position: absolute;background-color:#03A588; border-radius: 100%; color:white">
             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.25 5C5.56 5 5 5.56 5 6.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C7.5 5.56 6.94 5 6.25 5zm3.5 0c-.69 0-1.25.56-1.25 1.25v3.5a1.25 1.25 0 1 0 2.5 0v-3.5C11 5.56 10.44 5 9.75 5z"/>
             </svg>
           </a>
