--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -103,15 +103,17 @@
   </div>
   <!--end::Header Section-->
   <!-- Tablero -->
-  <div class="container" style="width: 700; height: 700px;background-color: white; position: relative;">
+  <div class="container" style="width: 700; height: 700px;background-color: #232323; position: relative;">
 
   </div>
   <!-- Video -->
-  <div style="text-align: center; position: absolute; width: 100%;margin: -690px 0px 0px 0;">
-    <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1000" height="auto" style="border-radius: 10px;"></video>
+  <div style="text-align: center; position: absolute; width: 100%;margin: -810px 0px 0px 0;">
+    <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
+    box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);"></video>
   </div>
   	<!--begin::Highlight-->
-    <div class="" style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
+    <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
       <!--begin::Link-->
       <div class="container" style="text-align: center;">
         <ng-container *ngIf="!playing; else elseBlock">
