--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -1,5 +1,5 @@
 <!--begin::Root-->
-<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;">
+<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">
   <!--begin::Header Section-->
   <div class="mb-0" id="home">
     <!--begin::Wrapper-->
@@ -101,6 +101,20 @@
     <!--end::Curve bottom-->
     <div class="container" style="text-align: center;">
       <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="640" height="480"></video>
+    </div>
+    
+    <div class="container">
+    
+    <div class="toolbar" id="toolbar" tabindex="0">
+      <a class="add material-icons" (click)="addNote()" >
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+      </a>
+    </div>
+    <div class="app" *ngFor="let note of notes">
+      <app-note (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note>
+    </div>
     </div>
   </div>
   <!--end::Header Section-->
