--- a/src/app/_metronic/layout2/layout.component.scss
+++ b/src/app/_metronic/layout2/layout.component.scss
@@ -25,3 +25,39 @@
 // #myVideo{
 //   display: none;
 // }
+
+.app{
+  width: 250px;
+  float: left;
+  margin-left: 10px;
+}
+
+.toolbar {/*
+  left: 0;
+  bottom: 0;*/
+  right: 0;
+  height:55px;/*
+  text-align: center;
+  position: fixed;*/
+  width: 100%;
+  background: transparent;/*
+  background-color: gold;
+  border: 10px solid gray;
+  border-bottom: 0;*/
+  color: gray;
+  font-size: -webkit-xxx-large;
+  font-weight: bold;
+}
+
+.add{
+  float: right;
+  margin-left: auto;
+  color: #fff;
+  /* width: 39px; */
+  cursor: pointer;
+  background: #7f6c04;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius: 67px;
+}
