--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -1,5 +1,5 @@
 <!-- Dashboard -->
-<div class="menu-item" *ngIf="showProyect">
+<div class="menu-item"><!--*ngIf="showProyect"-->
   <a
     class="menu-link without-sub"
     routerLink="/dashboard"
@@ -43,7 +43,7 @@
   >
 </div>
 
-<div class="menu-item" *ngIf="rol == 'Administrador'">
+<!--<div class="menu-item" *ngIf="rol == 'Administrador'">
   <a
     class="menu-link without-sub"
     routerLink="/boards"
@@ -55,7 +55,7 @@
       ></span> </span
     ><span class="menu-title">Notas</span></a
   >
-</div>
+</div>-->
 
 <!--<div class="menu-item">
   <a
@@ -70,7 +70,7 @@
     ><span class="menu-title">Cambiar Cuenta</span></a
   >
 </div>-->
-<div class="menu-item" *ngIf="showProyect && (rol == 'Usuario' || rol == 'Administrador')">
+<!--<div class="menu-item" *ngIf="showProyect && (rol == 'Usuario' || rol == 'Administrador')">
   <a
     class="menu-link without-sub"
     routerLink="/crafted/pages/wizards/project"
@@ -82,7 +82,7 @@
       ></span> </span
     ><span class="menu-title">Crear Proyectos</span></a
   >
-</div>
+</div>-->
 
 
 
