--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -82,7 +82,7 @@
             <!--end::Menu wrapper-->
             <!--begin::Toolbar-->
             <div class="flex-equal text-end ms-1">
-              <a routerLink="/dashboard" class="btn btn-success">Salir</a>
+              <a routerLink="/dashboard" class="btn btn-success">Salir de MbipiLab</a>
             </div>
             <!--end::Toolbar-->
           </div>
