--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -81,9 +81,7 @@
             </div>
             <!--end::Menu wrapper-->
             <!--begin::Toolbar-->
-            <div class="flex-equal text-end ms-1">
-              <a routerLink="/dashboard" class="btn btn-success">Salir</a>
-            </div>
+
             <!--end::Toolbar-->
           </div>
           <!--end::Wrapper-->
@@ -102,10 +100,16 @@
     <!--end::Curve bottom-->
 </div>
   <!--end::Header Section-->
+  <!-- Titulo -->
+  <div style="width: 100%;margin:0 166px 2rem 166px;">
+    <h1 style="width: 1320px;text-align: start;color: white;">
+      Entrevista al experto
+    </h1>
+
+  </div>
   <!-- Tablero -->
   <div class="container" style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #232323; position: relative;padding: 20px;">
-    
-    <div class="toolbar" id="toolbar" tabindex="0">
+    <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
       <a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -117,7 +121,7 @@
     </div>
   </div>
   <!-- Video -->
-  <div style="text-align: center; position: absolute; width: 100%;margin: -810px 0px 0px 0;">
+  <div style="text-align: center; position: absolute; width: 100%;margin: -860px 0px 0px 0;">
     <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
     -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
     box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);"></video>
@@ -125,6 +129,7 @@
   	<!--begin::Highlight-->
     <div style="background-color: #03A588;position: fixed; bottom: 0px;width: 100%; height: 80px;">
       <!--begin::Link-->
+      <!-- PlayPause Bttn -->
       <div class="container" style="text-align: center;">
         <ng-container *ngIf="!playing; else elseBlock">
           <a (click)="onPlayPause()" class="btn btn-lg flex-shrink-0 my-2">
@@ -141,7 +146,10 @@
           </a>
         </ng-template>
       </div>
-
+      <div class="container" style="align-items: flex-end;">
+        <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 0px 0px 0;
+        float: right;">Salir de MbipiLab</a>
+      </div>
 
 
 
