--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -105,7 +105,6 @@
     <h1 style="width: 1320px;text-align: start;color: white;">
       Entrevista al experto
     </h1>
-
   </div>
   <!-- Tablero -->
   <div class="container" style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #232323; position: relative;padding: 20px;">
@@ -147,7 +146,9 @@
         </ng-template>
       </div>
       <div class="container" style="align-items: flex-end;">
-        <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 0px 0px 0;
+        <a routerLink="/dashboard" class="btn btn-success" style="margin: -15px 10px 0px 10px;
+        float: right;">Siguiente Etapa</a>
+        <a routerLink="/dashboard" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
         float: right;">Salir de MbipiLab</a>
       </div>
 
