--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -116,7 +116,7 @@
     <div class="flex flex-auto p-6 sm:p-10">
 
             <div cdkDropListGroup>
-              <div class="notes-container">
+              <!--<div class="notes-container">
                 <h2 style="color: #fff;">Como Podriamos</h2>
             
                 <div
@@ -124,10 +124,10 @@
                   [cdkDropListData]="notas"
                   class="notes-list"
                   (cdkDropListDropped)="drop($event)">
-                  <div class="notes-box" *ngFor="let no of notas; let z = index;" cdkDrag>{{no.content}}
+                  <div class="notes-box" *ngFor="let no of filteredNotas | async; let z = index;" cdkDrag>{{no.content}}
                   </div>
                 </div>
-              </div>
+              </div>-->
               <div style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #fff; position: relative;padding: 20px;">
                 
                 <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
