--- a/src/app/pages/boards/boards.component.scss
+++ b/src/app/pages/boards/boards.component.scss
@@ -48,6 +48,16 @@
     display: inline-block;
     vertical-align: top;
   }
+
+  .example-container:first-child {
+    width: 100%;
+    background-color: #000 !important;
+    max-width: 100%;
+    height: 230px;
+    margin: 0 25px 25px 0;
+    display: grid;/*
+    vertical-align: top;*/
+  }
   
   .example-list {
     border: solid 1px #ccc;
