--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -1,48 +1,45 @@
 
-  .notes-container{
-    width: 100%;
-    max-width: 100%;
-    height: 300px;
-    margin: 0 25px 25px 0;
-    display: grid;/*
-    vertical-align: top;*/
+  :host {
+    height: 100%;
+    margin: 0;
+  
+    .flex-root {
+      height: 100%;
+    }
+  }
+  
+  .page-loaded {
+    app-layout {
+      opacity: 1;
+      transition: opacity 1s ease-in-out;
+    }
+  }
+  
+  .videoOn{
+    display: inline;
+  }
+  
+  .videoOff{
+    display: none;
+  }
+  
+  // #myVideo{
+  //   display: none;
+  // }
+  .app{
+    width: 250px;
+    float: left;
+    margin-left: 10px;
+  }
+  .dark-modal {
+    background-color: #292b2c !important;
+    color: white !important;
+  }
+  .dark-modal .close {
+    color: white !important;
   }
 
-  .notes-list{
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: rgb(204, 202, 202);
-    border-radius: 4px;
-    overflow: auto;
-    display: flex;
-    padding: 50px;
-  }
-
-  .notes-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: rgb(255, 201, 4);
-    font-size: 14px;
-    
-    width:150px;
-    min-width:150px;
-    height: 150px;
-    cursor: pointer;
-    overflow-wrap: break-word;
-    box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75);
-    /*margin: auto;*/
-    margin-left: 20px;
-    margin-bottom: 20px;
-  }
-
-  .example-container {
+  .clasificacion-container {
     width: 400px;
     max-width: 100%;
     margin: 0 25px 25px 0;
@@ -50,7 +47,7 @@
     vertical-align: top;
   }
   
-  .example-list {
+  .clasificacion-list {
     border: solid 1px #ccc;
     min-height: 60px;
     background: rgb(204, 202, 202);
@@ -60,7 +57,7 @@
     padding: 50px;
   }
   
-  .example-box {
+  .clasificacion-box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
@@ -82,11 +79,11 @@
     margin-bottom: 20px;
   }
   
-  .example-box:nth-child(even) {
+  .clasificacion-box:nth-child(even) {
       transform: rotate(0deg);
       }
   
-  .example-box:nth-child(odd) {
+  .clasificacion-box:nth-child(odd) {
   
       transform: rotate(0deg);
   
@@ -108,11 +105,11 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-box:last-child {
+  .clasificacion-box:last-child {
     border: none;
   }
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  .clasificacion-list.cdk-drop-list-dragging .clasificacion-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
@@ -211,76 +208,3 @@
     /*background-color:#000;
     border: 2px solid green;*/
   }
-
-  :host {
-    height: 100%;
-    margin: 0;
-  
-    .flex-root {
-      height: 100%;
-    }
-  }
-  
-  .page-loaded {
-    app-layout {
-      opacity: 1;
-      transition: opacity 1s ease-in-out;
-    }
-  }
-  
-  .videoOn{
-    display: inline;
-  }
-  
-  .videoOff{
-    display: none;
-  }
-  
-  // #myVideo{
-  //   display: none;
-  // }
-  .app{
-    width: 250px;
-    float: left;
-    margin-left: 10px;
-  }
-  
-  .toolbar {/*
-    left: 0;
-    bottom: 0;*/
-    position: fixed;
-    top: 180px;
-    right: 60px;
-    height:55px;/*
-    text-align: center;
-    position: fixed;*/
-    width: 100%;
-    background: transparent;/*
-    background-color: gold;
-    border: 10px solid gray;
-    border-bottom: 0;*/
-    color: gray;
-    font-size: -webkit-xxx-large;
-    font-weight: bold;
-  }
-  
-  .add{
-    float: right;
-    margin-left: auto;
-    color: #fff;
-    /* width: 39px; */
-    cursor: pointer;
-    background: #7f6c04;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #fff;
-    border-radius: 67px;
-  }
-  .dark-modal {
-    background-color: #292b2c !important;
-    color: white !important;
-  }
-  .dark-modal .close {
-    color: white !important;
-  }
-  
