ajuste tamaño tableros

--- a/src/app/_metronic/layout2/layout.component.html
+++ b/src/app/_metronic/layout2/layout.component.html
@@ -110,7 +110,7 @@
     </h1>
   </div>
   <!-- Tablero -->
-  <div class="container" style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #232323; position: relative;padding: 20px;">
+  <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
     <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
       <a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;" viewBox="0 0 16 16">
