--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -101,16 +101,16 @@
   </div>
     <!--end::Header Section-->
     <!-- Titulo -->
-    <!--<div class="container" style="width: 100%; padding: 0;">
-      <app-timer></app-timer>
-    </div>-->
+    <div class="container" style="width: 100%; padding: 0;">
+      <!-- <app-timer></app-timer> -->
+    </div>
     <div class="container" style="width: 100%; text-align: start;padding: 0; margin-bottom: 20px;">
       <h1 style="width: 1320px;text-align: start;color: white;">
-        Entrevista al experto
+        Categorización de notas
       </h1>
     </div>
     <!-- Tablero -->
-    <div class="container" style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #232323; position: relative;padding: 20px;">
+    <div class="container" style="min-width: 100%; min-height: 600px;overflow: auto;background-color: #232323; position: relative;padding: 20px; margin: 0;">
     <div
     class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto"
     cdkScrollable #tableroRef>
@@ -118,47 +118,47 @@
     <!-- Main -->
     <div class="flex flex-auto p-6 sm:p-10">
 
-            <div cdkDropListGroup>
-              <!--<div class="notes-container">
-                <h2 style="color: #fff;">Como Podriamos</h2>
+      <div cdkDropListGroup>
+        <!--<div class="notes-container">
+          <h2 style="color: #fff;">Como Podriamos</h2>
 
-                <div
-                  cdkDropList
-                  [cdkDropListData]="notas"
-                  class="notes-list"
-                  (cdkDropListDropped)="drop($event)">
-                  <div class="notes-box" *ngFor="let no of filteredNotas | async; let z = index;" cdkDrag>{{no.content}}
-                  </div>
-                </div>
-              </div>-->
-              <div style="width: 100%; height: 600px;overflow: auto;margin-bottom: 100px;background-color: #fff; position: relative;padding: 20px;">
+          <div
+            cdkDropList
+            [cdkDropListData]="notas"
+            class="notes-list"
+            (cdkDropListDropped)="drop($event)">
+            <div class="notes-box" *ngFor="let no of filteredNotas | async; let z = index;" cdkDrag>{{no.content}}
+            </div>
+          </div>
+        </div>-->
+        <div style="width: 100%; height: 600px;overflow: auto;background-color: #fff; position: relative;padding: 20px;">
 
-                <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
-                  <!--<input name="category" #category type="text"/>-->
-                  <a class="add-category material-icons" (click)="addCategory()" >
-                    Agregar Categoria
-                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;margin-left: 120px;" viewBox="0 0 16 16">
-                      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                    </svg>
-                  </a>
+          <div class="toolbar" id="toolbar" tabindex="0" style="position:static !important">
+            <!--<input name="category" #category type="text"/>-->
+            <a class="add-category material-icons" (click)="addCategory()" >
+              Agregar Categoria
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" style="margin-top: -40px;margin-left: 120px;" viewBox="0 0 16 16">
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+              </svg>
+            </a>
+          </div>
+          <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
+          <div [ngClass]="i == 0 ? 'notes-container' : 'example-container'">
+              <h2 style="color: #000;line-height: 2;" contenteditable="true" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}</h2>
+              <h2 style="color: #000;" *ngIf="i == 0">{{t.title}}</h2>
+              <div
+                cdkDropList
+                [cdkDropListData]="t.data"
+                [ngClass]="i == 0 ? 'notes-list' : 'example-list'"
+                (cdkDropListDropped)="drop($event)">
+                <div [ngClass]="i == 0 ? 'notes-box' : 'example-box'" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.content}}
                 </div>
-                <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
-                <div [ngClass]="i == 0 ? 'notes-container' : 'example-container'">
-                    <h2 style="color: #000;line-height: 2;" contenteditable="true" (blur)="onFocusOut($event, i)" *ngIf="i > 0">{{t.title}}</h2>
-                    <h2 style="color: #000;" *ngIf="i == 0">{{t.title}}</h2>
-                    <div
-                      cdkDropList
-                      [cdkDropListData]="t.data"
-                      [ngClass]="i == 0 ? 'notes-list' : 'example-list'"
-                      (cdkDropListDropped)="drop($event)">
-                      <div [ngClass]="i == 0 ? 'notes-box' : 'example-box'" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.content}}
-                      </div>
-                    </div>
-                  </div>
-                </ng-container>
               </div>
             </div>
-</div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
 
 </div>
 <ng-container *ngFor="let eq of equipo; let i = index;">
@@ -168,6 +168,9 @@
 <canvas id="canvasId" #canvasRef width="100" height="100"></canvas>
 </div>
 <!-- Video -->
+<!-- Fondo Opaco   -->
+<div [ngClass]="showVideoFlag ? videoOn : videoOff" class="fondo-video" style="background-color: black; height: 1125px; width: 100%;position: absolute; margin: -1125px 0 0 0;opacity: 0.9;">
+</div>
 <div style="text-align: center; position: absolute; width: 100%;margin: -860px 0px 0px 0;">
   <video id="myVideo" [ngClass]="showVideoFlag ? videoOn : videoOff" src="http://res.cloudinary.com/tresideambipi/video/upload/v1659722491/videos/video_test_clgg4o.mp4" width="1200" height="auto" style="border-radius: 10px;-webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
   -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
